# wasm-admin

./: Cargo.toml  README.md  package.json  webpack.config.js
src/: a_component.rs  api.rs  app.rs  error.rs  home.rs  http.rs  index.rs  lib.rs  login.rs  minroute.rs  testroute.rs
src/api/: auth.rs  mod.rs
src/components/: center.rs  dbform.rs  footer.rs  header.rs  login.rs  mod.rs  upload.rs  wspage.rs
src/route/: mod.rs
src/routes/: mod.rs
src/util/: jwt.rs  mod.rs  request.rs
static/: index.html  main.html  style.scss  test.html
