[package]
name = "wasm-admin"
version = "0.1.0"
authors = ["real_cpf <real_cpf@126.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dotenv_codegen = "0.15.0"
lazy_static = "1.4.0"
parking_lot = "0.11.0"
log = "0.4"
strum = "0.17"
strum_macros = "0.17"
serde = "1"
serde_json = "1"
serde_derive = "1"
wasm-bindgen = "^0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.17"
yew-router = { version="0.14.0", features = ["web_sys"] }
thiserror = "1"
anyhow = "1"
js-sys = "^0.3.35"



[dependencies.web-sys]
version = "^0.3.35"
features = [
  'KeyboardEvent',
]